--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
                 "all"
             ],
             "options": {
-                "cwd": "${workspaceFolder}/lab1/zad1/"
+                "cwd": "${workspaceFolder}/cw01/zad1/"
             },
             "problemMatcher": [],
         }
