--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/cw01/zad1/countdown",
+            "program": "${workspaceFolder}/cw01/countdown",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
