--- a/cw05/zad1/Makefile
+++ b/cw05/zad1/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 BUILD_DIR=build
 BUILD := release
 
-cflags.common := -Wall -Wextra -std=c17
+cflags.common := -Wall -Wextra -std=gnu99
 cflags.debug := -g -O0
 cflags.release := -O2
 CFLAGS := ${cflags.${BUILD}} ${cflags.common}
