--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,9 @@ add_executable(sysops
         cw07/Makefile
         cw07/queue_spec.h
         cw07/server.c)
+
+add_executable(cw08
+        cw08/printers_server.c
+        cw08/users_client.c
+        cw08/Makefile
+        cw08/shared_memory_spec.h)
